--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "qrcode": "^1.5.4"
   }
 }
