--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "twilio": "^5.4.2"
   }
 }
