--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-
+    "@supabase/supabase-js": "^2.48.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
-    "qrcode": "^1.5.4"
+    "nodemailer": "^6.10.0",
+    "qrcode": "^1.5.4",
+    "supabase": "^2.6.8"
   }
 }
