--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@firebase/app": "^0.10.18",
     "@firebase/auth": "^1.8.2",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "firebase": "^11.2.0",
